# MLPro

./: .gitignore  .gitmodules  .readthedocs.yaml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  deps.txt  generated.txt  make.bat  randomtestfile.txt  rebuild_ux.sh  rebuild_win.bat  requirements.txt  setup.cfg  testissue.txt
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature_request.md  meeting.md  mlpro-extension.md  refactoring.md  release-checklist.md  release.md  sprint-planning.md
.github/history/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: assign_project.yml  ci.yml  conda_deploy.yml  deps_checks.yml  doc_gen.yml  docker_deploy.yml  docs-gen.yml  extension_hub.yml  marketplace.yml  pypi_deploy.yml  pypy.yml  python-app.yml  python37.yml  python38.yml  python39.yml  ur5env.yml
conda-recipe/: conda_build_config.yaml  meta.yaml
doc/: MLPro - Architecture.drawio  template.py
doc/bf/: MLPro-BF-ML class diagram.drawio  MLPro-BF-Math class diagram.drawio  uml_math.drawio  uml_ml.drawio  uml_various.drawio
doc/docs/: README.rst  conf.py  index - Copy.rst  index.rst
doc/gpt/: howtos.py
doc/gt/: MLPro-GT class diagram.drawio
doc/rl/: flowchart agent-adapt.drawio  flowchart agent-adapt2.drawio  uml_rl.drawio  uml_rl_env.drawio  uml_rl_env2  uml_rl_env2.drawio
doc/rtd/: Makefile  conda_env.yml  conf.py  index.rst  index.rst.bak  index_01_welcome.rst  index_02_mlpro_bf.rst  index_03_mlpro_sl.rst  index_04_mlpro_rl.rst  index_05_mlpro_gt.rst  index_06_mlpro_oa.rst  index_99_appendix1.rst  index_99_appendix2.rst  index_99_appendix3.rst  make.bat  requirements.txt
drafts_Amerik/: basic_control.py  pid2.py
edu/: README.md
examples/bf/: Howto 01 - (Various) Log and timer.py  Howto 01 - (Various) Logging.py  Howto 02 - (Math) Spaces, subspaces and elements.py  Howto 02 - (Various) Timer.py  Howto 03 - (Math) Spaces, subspaces and elements.py  Howto 03 - (Various) Store, plot, and save variables.py  Howto 04 - (Data) Store, plot, and save variables.py  Howto 04 - (ML) Hyperparameters setup.py  Howto 04 - (Various) Store, plot, and save variables.py  Howto 05 - (ML) Hyperparameters setup.py  Howto 06 - (Data) Buffer.py  Howto 07 - (ML) Hyperparameter Tuning using Hyperopt.py  Howto 08 - (ML) Hyperparameter Tuning using Optuna.py  Howto-BF-001_Logging.py  Howto-BF-002_(Various)_Timer.py  Howto-BF-002_Timer.py  Howto-BF-003_(Math)_Spaces_and_elements.py  Howto-BF-004_(Data)_Store,_plot_and_save_variables.py  Howto-BF-005_(ML)_Hyperparameters.py  Howto-BF-006_(Data)_Buffers.py  Howto-BF-007_(ML)_Hyperparameter_Tuning_using_Hyperopt.py  Howto-BF-008_(ML)_Hyperparameter_Tuning_using_Optuna.py
examples/dsm/: Howto 50 - (DSM) Accessing Data from OpenML.py
examples/gt/: Howto 06 - (GT) Run multi-player with own policy in multicartpole game board.py  Howto 07 - (GT) Train own multi-player with multicartpole game board.py  Howto-GT-001_Run_multi-player_with_own_policy_in_multicartpole_game_board.py  Howto-GT-002_Train_own_multi-player_with_multicartpole_game_board.py
examples/rl/: Howto 01 - (RL) Types of reward.py  Howto 02 - (RL) Run agent with own policy with gym environment.py  (+44 more)
extensions/: update_extension_hub.py  whitelist
marketplace/: update_marketplace.py  whitelist
src/: setup.py
src/conda/: meta.yaml
src/mlpro/rl/pool/envs/multigeorobot/src/multi_geo_robot/: CMakeLists.txt  package.xml
src/mlpro/rl/pool/envs/multigeorobot/src/multi_geo_robot_desc/: .gitignore  CMakeLists.txt  gripper_contact_handler.py  package.xml  setup.py
src/mlpro/rl/pool/envs/multigeorobot/src/multi_geo_robot_desc/config/: config.rviz  controllers.yaml  joint_state_controller.yaml  multi_geo_robot.srdf  ompl_planning.yaml  robotConfig.yaml
src/mlpro/rl/pool/envs/multigeorobot/src/multi_geo_robot_desc/launch/: move_group.launch  multi_geo_robot.launch  multi_geo_robot_empty.launch  multi_geo_robot_moveit_controller_manager.launch.xml  multi_geo_robot_moveit_sensor_manager.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_rviz.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  view_robot.launch
src/mlpro/rl/pool/envs/multigeorobot/src/multi_geo_robot_desc/models/: BaseModel2.dae  FirstLink.dae  gazebo.xacro  model.urdf  robot.urdf.xacro  robot_creator.xacro.template  robot_environment.xacro
src/mlpro/rl/pool/envs/multigeorobot/src/multi_geo_robot_desc/src/multi_geo_robot_desc/: common.py
src/mlpro/rl/pool/envs/multigeorobot/src/multi_geo_robot_desc/urdf/: model.urdf  model_back.urdf
src/mlpro/rl/pool/envs/multigeorobot/src/multi_geo_robot_desc/worlds/: empty.world
src/mlpro/rl/pool/envs/ur5jointcontrol/src/industrial_robot_status_controller/industrial_robot_status_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml
src/mlpro/rl/pool/envs/ur5jointcontrol/src/industrial_robot_status_controller/industrial_robot_status_controller/include/industrial_robot_status_controller/: industrial_robot_status_controller.h
src/mlpro/rl/pool/envs/ur5jointcontrol/src/industrial_robot_status_controller/industrial_robot_status_controller/src/: controller.cpp
src/mlpro/rl/pool/envs/ur5jointcontrol/src/industrial_robot_status_controller/industrial_robot_status_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/mlpro/rl/pool/envs/ur5jointcontrol/src/industrial_robot_status_controller/industrial_robot_status_interface/include/industrial_robot_status_interface/: industrial_robot_status_interface.h
src/mlpro/rl/pool/envs/ur5jointcontrol/src/ur_msgs/: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/mlpro/rl/pool/envs/ur5jointcontrol/src/ur_msgs/srv/: SetPayload.srv
test/: test_buffer.py  test_environment.py  test_examples.py  test_examples_ur5.py  test_math.py  test_oa_pid_controller.py  test_pool_policies.py  test_sb3_policy_wrapper.py  test_sb3_policy_wrapper_ut.py  test_various.py
test_amerik/: MLPro.code-workspace  basic_control.py  intro.py  pid.py  test.py
(+3811 files in other folders)
