[metadata]
name = mlpro
version = 1.3.1
author = MLPro Team
author_email = mlpro@listen.fh-swf.de
description = MLPro - The Integrative Middleware Framework for Standardized Machine Learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mlpro.readthedocs.io
project_urls = 
    Bug Tracker = https://mlpro.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
full =
    dill>=0.3.6
    numpy>=1.24.2
    torch>=2.0.0
    matplotlib>=3.7.1
    scipy>=1.10.1
    multiprocess>=0.70.14
    optuna>=3.1.1
    hyperopt>=0.2.7
    mujoco>=2.3.3
    lxml>=4.9.2
