[metadata]
name = mlpro
version = 1.9.6
author = MLPro Team
author_email = mlpro@listen.fh-swf.de
description = MLPro - The integrative middleware framework for standardized machine learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mlpro.readthedocs.io
project_urls = 
    Bug Tracker = https://mlpro.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires >=3.10
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
full =
    dill>=0.3.9
    multiprocess>=0.70.17
    numpy>=1.24.2
    PySide6>=6.8.1
    matplotlib>=3.10.0
    scipy>=1.10.1
    pandas>=2.1.3
