[metadata]
name = mlpro
version = 2.0.2
author = MLPro Team
author_email = mlpro@listen.fh-swf.de
description = MLPro - The integrative middleware framework for standardized machine learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mlpro.readthedocs.io
project_urls = 
    Bug Tracker = https://mlpro.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
full =
    dill>=0.4.0
    multiprocess>=0.70.18
    numpy>=2.2.5
    PySide6>=6.9.0
    matplotlib>=3.10.1
    scipy>=1.10.1
    pandas>=2.1.3
