<?xml version="1.0"?>
<package format="2">
  <name>multi_geo_robot</name>
  <version>1.0.0</version>
  <description>The multi_geo_robot package</description>
  <license>MIT</license>
  <author email="diprasethya.mochammadrizky@fh-swf.de">Mochammad Rizky Diprasetya</author>
  <maintainer email="diprasethya.mochammadrizky@fh-swf.de">Mochammad Rizky Diprasetya</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros_link_attacher</exec_depend>
  <exec_depend>multi_geo_robot_desc</exec_depend>
  <exec_depend>multi_geo_robot_gazebo</exec_depend>
  <exec_depend>roboticsgroup_gazebo_plugins</exec_depend>
  <exec_depend>robotiq</exec_depend>
  <export><metapackage/></export>
</package>