<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ur_msgs</name>
  <version>1.3.1</version>
  <description>Message and service definitions for interacting with Universal Robots robot controllers.</description>
  <author>Andrew Glusiec</author>
  <author>Felix Messmer</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada Sarasola</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent />
    <rosindex>
      <tags>
        <tag>messages</tag>
        <tag>ros-industrial</tag>
        <tag>services</tag>
        <tag>universal_robot</tag>
      </tags>
    </rosindex>
    <ros_industrial>
      <support_level value="community" />
    </ros_industrial>
  </export>
</package>
