<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>industrial_robot_status_controller</name>
  <version>0.1.2</version>
  <description>A ros_control controller that reports robot status using the ROS-Industrial RobotStatus message.</description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>industrial_robot_status_interface</build_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>industrial_msgs</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>

  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
